LIST OF CHANGES

 - staging area daemon: when the folder_name is not in the DB, check the run is "run pending" for given id_run before updating the DB
 - Switched the default st::api::lims driver from xml to samplesheet.
   Fixed tests, which implicitly relied on the xml driver being the default.
   Some tests used the default driver type. For those tests either test
   samplesheets were generated and used as a source of LIMS data or the
   driver type was explicitly set as 'xml'.
 - In samplesheet generation (npg::samplesheet) explicitly set the default
   st::api::lims driver to xml. This driver was previously used implicitly.

release 92.3.1
 - A WHILE loop in run_list.tt2 iterates over a number of pages (40 runs
   per page) in a visual listing of runs. The number of pages is now
   (January 2022) sufficiently high to trigger an error in Template Toolkit,
   which, by default, allows 1000 iterations only. The value of
   $Template::Directive::WHILE_MAX variable is, therefore, set to 2000.

release 92.3.0
 - New link in sigularity image to pass npg_tracking configuration file.
 - Removed ability of the tracking server to provide directory views of
   visible to the server /nfs partitions since nfs staging servers are
   no longer used.
 - Removed co-location functionality in npg_tracking views. Co-location checks
   will not make sense once npg_tracking runs in containers in head nodes.
   Staging areas are not local to head node/reachable from within the
   container.
 - Removed old team names from run add template.
 - Removed unused daemon runners for staging daemons and the Jenkins server.
 - Made NovaSeq instruments skip wash statuses after completing a run, this
   does not affect statuses set manually through the UI.
 - Added lab location to instrument pages. Instruments are also now 
   colour-coded on the graphical instrument list page.

release 92.2.0
 - Added singularity definition for the tracking web server.
 - Tracking web pages: